tests/neg/unbound.ovt
actuator a : rate(int, (10, 0));
a = nowhere;
